2018-09-16  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/hook_funcs.c: Fix "No shared library is found to hook." on macOS.
	    (oracle-enhanced issue #1768)

2018-09-11  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/object.c, lib/oci8/cursor.rb: Change the internal structure
	    about object type binding to use array fetching for object types.

2018-09-09  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/lob.c: Read lob data without checking readable size to
	    reduce number of network round trips from two to one.

2018-09-05  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/stmt.c, lib/oci8/cursor.rb,
	  lib/oci8/oci8.rb, test/test_oci8.rb: Use array fetching when
	    LOB colums are in a query and no object types are in the query.

2018-09-02  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/bind.c, ext/oci8/stmt.c,
	  lib/oci8/bindtype.rb, test/test_oci8.rb: Rewrite OCI8::BindType::Long
	    and OCI8::BindType::LongRaw to handle up to 2 gigabyte data using
	    dynamically allocated buffers.

2018-08-22  Kubo Takehiro <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.5.1 and 2.2.6
	* lib/oci8/version.rb: Update to 2.2.6
	* mkpkg-win32.rb: Don't test with self-build ruby 2.4.

2018-08-22  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: Load a Oracle client library which doesn't have
	    version number suffix also on Unix when runtime-check is enabled.
	    Oracle version numbers are incremented yearly sice Oracle 18c.

2018-08-22  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/hook_funcs.c, ext/oci8/win32.c: Suppress warnings:
	   "'raise_error' defined but not used" and "'strncpy' specified
	   bound 512 equals destination size".

2018-08-19  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/hook_funcs.c: Not depend on Oracle version number
	   of Oracle client file name suffix when hooking functions.
	   (rsim/oracle-enhanced#1754)
	* test/test_all.rb, test/test_properties.rb, dist-files:
	   Add tests for hooking.
